--- a/apps/comment/templates/comment/comment_form.html
+++ b/apps/comment/templates/comment/comment_form.html
@@ -1,12 +1,14 @@
 {% load static %}
-<div class="card border-0 rounded-0" id="editor-block">
+<div class="card border-0 rounded-0 f-16" id="editor-block">
     {% if user.is_authenticated %}
     <div class="card-body p-2 p-md-3">
         <textarea class="form-control rounded-0" id="comment-form" name="text"
                   placeholder="评论请使用markdown语法，支持emoji表情语法" rows="5" required></textarea>
     </div>
     <div class="card-footer border-0 bg-white py-0 px-2 px-md-3" id="editor-footer">
-        <button type="button" class="btn btn-info btn-sm float-right">提交评论</button>
+        <button type="button" class="btn btn-info btn-sm float-right f-16"
+                id="push-com" data-csrf="{{ csrf_token }}" data-article-id="{{ article.id }}"
+                data-ajax-url="{% url 'comment:add_comment' %}">提交评论</button>
         <button class="btn btn-sm py-0 px-2" id="emoji-btns" type="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-smile-o fa-2x"></i>
@@ -149,9 +151,9 @@
             <a class="text-danger" href="{% url 'account_signup' %}?next={{ request.path }}">注册</a> 后评论
         </div>
         <div class="login-link mt-2">
-            <a class="mx-3" href="/accounts/weibo/login/?process=login" title="社交账号登录有点慢，请耐心等候！"><i
+            <a class="mx-3" href="/accounts/weibo/login/?next={{ request.path }}" title="社交账号登录有点慢，请耐心等候！"><i
                     class="fa fa-weibo fa-2x"></i></a>
-            <a class="mx-3" href="/accounts/github/login/?process=login" title="社交账号登录有点慢，请耐心等候！"><i
+            <a class="mx-3" href="/accounts/github/login/?next={{ request.path }}" title="社交账号登录有点慢，请耐心等候！"><i
                     class="fa fa-github fa-2x"></i></a>
         </div>
     </div>
