--- a/apps/comment/static/comment/css/base_comment.css
+++ b/apps/comment/static/comment/css/base_comment.css
@@ -93,6 +93,9 @@
 .rep-btn:hover {
     color:#ea6f5a;
 }
+.CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
+    background: none;
+}
 /* Extra large devices (large desktops, 1200px and up) */
 /* PC X-iPad Pro*/
 @media (min-width: 1200px) {
