--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load comment_tags %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -64,10 +65,10 @@ $(function() {
 	headroom.init()
 });
 </script>
-<script src="{% static 'blog/js/base.js'%}?v=20171222.201"></script>
+<script src="{% static 'blog/js/base.js'%}?v=20171222.21"></script>
 {% if user.is_authenticated %}
 <script>
-var msgs = 0;
+var msgs = {% get_notifications_count user 'false' %};
 if (msgs > 0) {
 	var _record = 0;
 	var myTitle = document.title;
