--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -15,7 +15,7 @@
 {% endif %}
 <link href="{% static 'blog/css/detail.css' %}?v=20180102.04658" rel="stylesheet">
 <link href="{% static 'blog/css/github-colorful.css' %}?v=20180102.130" rel="stylesheet">
-<link href="{% static 'comment/css/base_comment.css' %}?v=20180114.0038" rel="stylesheet">
+<link href="{% static 'comment/css/base_comment.css' %}?v=20180114.008" rel="stylesheet">
 {% endblock %}
 
 {% block base_content %}
@@ -104,6 +104,10 @@
 {% block end_file %}
 {% if user.is_authenticated %}
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-<script src="{% static 'comment/js/editor.js' %}?v=20180113.06033"></script>
+<script src="{% static 'comment/js/editor.js' %}?v=20180113.043"></script>
+<script src="{% static 'comment/js/activate-power.js' %}?v=20180120"></script>
+<script>
+var sw=window.screen.width;if(sw>1200){POWERMODE.colorful=true;POWERMODE.shake=false;document.body.addEventListener('input',POWERMODE)};
+</script>
 {% endif %}
 {% endblock %}
