--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -26,7 +26,7 @@
             <div class="timeline-panel">
                 <div class="timeline-heading">
                     <h2 class="timeline-title">{{ timeline.title_to_emoji }}</h2>
-                    <p>
+                    <p class="mb-1">
                         <span class="text-muted"><i class="glyphicon glyphicon-time"></i> {{ timeline.update_date|date:'Y-m-d'  }}</span>
                         <span class="pull-right" id="star" title="{% get_star_title timeline.star_num %}">{% get_star timeline.star_num %}</span>
                     </p>
