--- a/apps/comment/static/comment/css/notification.css
+++ b/apps/comment/static/comment/css/notification.css
@@ -1,201 +1,1 @@
-#notes-main .panel-heading {
-    background-color: #3594cb;
-}
-
-#notes-main .active {
-    background-color: #6cbfee;
-}
-
-.cbp_tmtimeline {
-	margin: 0 0 0 0;
-	padding: 0;
-	list-style: none;
-	position: relative;
-}
-
-/* The line */
-.cbp_tmtimeline:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	width: 10px;
-	background: #afdcf8;
-	left: 20%;
-	margin-left: -10px;
-}
-
-/* The date/time */
-.cbp_tmtimeline > li {
-	position: relative;
-}
-
-.cbp_tmtimeline > li .cbp_tmtime {
-	display: block;
-	width: 25%;
-	padding-right: 100px;
-	position: absolute;
-}
-
-.cbp_tmtimeline > li .cbp_tmtime span {
-	display: block;
-	text-align: right;
-}
-
-.cbp_tmtimeline > li .cbp_tmtime span:first-child {
-	font-size: 0.9em;
-	color: #bdd0db;
-}
-
-.cbp_tmtimeline > li .cbp_tmtime span:last-child {
-	font-size: 2.9em;
-	color: #3594cb;
-}
-
-.cbp_tmtimeline > li:nth-child(odd) .cbp_tmtime span:last-child {
-	color: #6cbfee;
-}
-
-/* Right content */
-.cbp_tmtimeline > li .cbp_tmlabel {
-	margin: 0 0 15px 25%;
-	background: #3594cb;
-	color: #fff;
-	padding: 2em;
-	font-size: 1.2em;
-	font-weight: 300;
-	line-height: 1.4;
-	position: relative;
-	border-radius: 5px;
-}
-
-.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
-	background: #6cbfee;
-}
-.cbp_tmtimeline .to_read,
-.cbp_tmtimeline .to_delete {
-    margin-bottom:1.5em;
-}
-.cbp_tmtimeline > li .cbp_tmlabel h2 {
-	margin-top: 0px;
-	padding: 0 0 10px 0;
-	font-size:1.3em;
-	border-bottom: 1px solid rgba(255,255,255,0.4);
-}
-
-/* The triangle */
-.cbp_tmtimeline > li .cbp_tmlabel:after {
-	right: 100%;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-	border-right-color: #3594cb;
-	border-width: 10px;
-	top: 10px;
-}
-
-.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
-	border-right-color: #6cbfee;
-}
-
-/* The icons */
-.cbp_tmtimeline > li .cbp_tmicon {
-	width: 40px;
-	height: 40px;
-	font-family: 'ecoico';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	font-size: 1.4em;
-	line-height: 40px;
-	-webkit-font-smoothing: antialiased;
-	position: absolute;
-	color: #fff;
-	background: #46a4da;
-	border-radius: 50%;
-	box-shadow: 0 0 0 8px #afdcf8;
-	text-align: center;
-	left: 20%;
-	top: 0;
-	margin: 0 0 0 -25px;
-}
-
-.cbp_tmicon-phone:before {
-	content: "\e000";
-}
-
-.cbp_tmicon-screen:before {
-	content: "\e001";
-}
-
-.cbp_tmicon-mail:before {
-	content: "\e002";
-}
-
-.cbp_tmicon-earth:before {
-	content: "\e003";
-}
-
-/* Example Media Queries */
-@media screen and (max-width: 65.375em) {
-
-	.cbp_tmtimeline > li .cbp_tmtime span:last-child {
-		font-size: 1.5em;
-	}
-	.cbp_tmtimeline .to_read,
-.cbp_tmtimeline .to_delete {
-    margin-bottom:1.5em;
-}
-}
-
-@media screen and (max-width: 47.2em) {
-	.cbp_tmtimeline:before {
-		display: none;
-	}
-
-	.cbp_tmtimeline > li .cbp_tmtime {
-		width: 100%;
-		position: relative;
-		padding: 0 0 20px 0;
-	}
-	.cbp_tmtimeline .to_read,
-.cbp_tmtimeline .to_delete {
-    margin-bottom:3em;
-}
-
-	.cbp_tmtimeline > li .cbp_tmtime span {
-		text-align: left;
-	}
-
-	.cbp_tmtimeline > li .cbp_tmlabel {
-		margin: 0 0 30px 0;
-		padding: 1em;
-		font-weight: 400;
-		font-size: 95%;
-	}
-
-	.cbp_tmtimeline > li .cbp_tmlabel:after {
-		right: auto;
-		left: 20px;
-		border-right-color: transparent;
-		border-bottom-color: #3594cb;
-		top: -20px;
-	}
-
-	.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
-		border-right-color: transparent;
-		border-bottom-color: #6cbfee;
-	}
-
-	.cbp_tmtimeline > li .cbp_tmicon {
-		position: relative;
-		float: right;
-		left: auto;
-		margin: -55px 5px 0 0px;
-	}
-}
+.url-menu .badge{width:2rem;border-radius:.2rem;background-color:#17a2b8;color:#fff;font-weight:700}.url-menu .active .badge{background-color:#fff;color:#17a2b8}#notes-main .active{background-color:#17a2b8}.cbp_tmtimeline{position:relative;margin:0;padding:0;list-style:none}.cbp_tmtimeline:before{position:absolute;top:0;bottom:0;left:20%;margin-left:-10px;width:10px;background:#afdcf8;content:''}.cbp_tmtimeline>li{position:relative}.cbp_tmtimeline>li .cbp_tmtime{position:absolute;display:block;padding-right:75pt;width:25%}.cbp_tmtimeline>li .cbp_tmtime span{display:block;text-align:right}.cbp_tmtimeline>li .cbp_tmtime span:first-child{color:#bdd0db;font-size:.9em}.cbp_tmtimeline>li .cbp_tmtime span:last-child{color:#3594cb;font-size:2.2em}.cbp_tmtimeline>li:nth-child(odd) .cbp_tmtime span:last-child{color:#6cbfee}.cbp_tmtimeline>li .cbp_tmlabel{position:relative;margin:0 0 15px 25%;padding:1em;border-radius:2px;background:#fff;color:#333;font-weight:300;font-size:1.1em;line-height:1.4}.cbp_tmtimeline>li:nth-child(odd) .cbp_tmlabel{background:#fff}.cbp_tmtimeline .to_delete,.cbp_tmtimeline .to_read{margin-bottom:1.8em}.cbp_tmtimeline>li .cbp_tmlabel h2{margin-top:0;padding:0 0 10px;border-bottom:1px solid rgba(123,170,255,.4);font-size:1.1em}.cbp_tmtimeline>li .cbp_tmlabel:after{position:absolute;top:10px;right:100%;width:0;height:0;border:solid transparent;border-width:10px;content:" ";pointer-events:none;border-right-color:#fff}.cbp_tmtimeline>li:nth-child(odd) .cbp_tmlabel:after{border-right-color:#fff}.cbp_tmtimeline>li .cbp_tmicon{position:absolute;top:0;left:20%;margin:0 0 0 -25px;width:40px;height:40px;border-radius:50%;background:#46a4da;box-shadow:0 0 0 8px #afdcf8;color:#fff;text-align:center;text-transform:none;font-weight:400;font-style:normal;font-variant:normal;font-size:1.1em;font-family:ecoico;line-height:40px;speak:none;-webkit-font-smoothing:antialiased}.cbp_tmicon-phone:before{content:"\e000"}.cbp_tmicon-screen:before{content:"\e001"}.cbp_tmicon-mail:before{content:"\e002"}.cbp_tmicon-earth:before{content:"\e003"}@media screen and (max-width:991px){.cbp_tmtimeline>li .cbp_tmtime span:last-child{font-size:1.6em}.cbp_tmtimeline>li .cbp_tmlabel{margin:0 0 15px 28%}.cbp_tmtimeline>li .cbp_tmicon{left:22.5%;width:30px;height:30px;line-height:30px}.cbp_tmtimeline:before{left:21.5%}}@media screen and (max-width:755px){.cbp_tmtimeline:before{display:none}.cbp_tmtimeline>li .cbp_tmtime{position:relative;padding:0 0 20px;width:100%}.cbp_tmtimeline .to_delete,.cbp_tmtimeline .to_read{margin-bottom:2.3em}.cbp_tmtimeline>li .cbp_tmtime span{text-align:left}.cbp_tmtimeline>li .cbp_tmlabel{margin:0 0 30px;padding:1em;font-weight:400;font-size:95%}.cbp_tmtimeline>li .cbp_tmlabel:after{top:-20px;right:auto;left:20px}.cbp_tmtimeline>li .cbp_tmlabel:after,.cbp_tmtimeline>li:nth-child(odd) .cbp_tmlabel:after{border-right-color:transparent;border-bottom-color:#fff}.cbp_tmtimeline>li .cbp_tmicon{position:relative;left:auto;float:right;margin:-55px 5px 0 0}}
