--- a/apps/tool/templates/tool/bd_push.html
+++ b/apps/tool/templates/tool/bd_push.html
@@ -49,7 +49,7 @@
                   placeholder="示例如下：&#10;http://www.example.com/mip/&#10;http://www.example.com/mip/1.html&#10;http://www.example.com/mip/2.php"></textarea>
         <small class="form-text text-muted">注：提交的链接的域名必须与接口中site保持一直才能推送成功</small>
     </div>
-    <button type="submit" class="btn btn-info btn-sm" id="start-push">开始推送</button>
+    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-push">开始推送</button>
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">推送结果</div>
