--- a/apps/tool/templates/tool/link_test.html
+++ b/apps/tool/templates/tool/link_test.html
@@ -41,7 +41,7 @@
                   placeholder="示例如下：&#10;http://www.example1.com/&#10;http://www.example2.com/friends/&#10;http://www.example3.com/youlian/"></textarea>
         <small class="form-text text-muted">注：友站的友链不一定都放在首页，友链放在哪里就提供哪个链接</small>
     </div>
-    <button type="submit" class="btn btn-info btn-sm" id="start-push">开始检测</button>
+    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-push">开始检测</button>
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">检测结果</div>
