--- a/apps/tool/templates/tool/regex.html
+++ b/apps/tool/templates/tool/regex.html
@@ -35,11 +35,11 @@
         <label>正则表达式：</label>
         <input type="url" class="form-control rounded-0" id="form-regex" placeholder="例： [a-zA-z]+://[\S]*" required>
     </div>
-    <button type="submit" class="btn btn-info btn-sm" id="start-re">开始匹配</button>
+    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-re">开始匹配</button>
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">匹配结果</div>
-    <div class="card-body push-result text-center py-3">结果显示区</div>
+    <div class="card-body push-result text-center p-3">结果显示区</div>
 </div>
 {% endblock %}
 
