--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -12,6 +12,13 @@
 body {
     background: #f4f4f4;
     padding-top:4.8rem;
+    display: -webkit-flex; /* Safari */
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+main {
+	flex: 1 0 auto;
 }
 .container {
     padding-right: 5px;
