--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -19,7 +19,7 @@
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="http://cdn.bootcss.com/headroom/0.5.0/headroom.min.js"></script>
     <!-- blog CSS -->
-    <link href="{% static 'blog/css/base.css' %}?v=20171223.018" rel="stylesheet">
+    <link href="{% static 'blog/css/base.css' %}?v=20171223.0183" rel="stylesheet">
     {% block top-file %}{% endblock %}
 </head>
 <body>
@@ -47,7 +47,15 @@
 </div>
 
 <!--主要内容块-->
-{% block base_content %}{% endblock %}
+<main>{% block base_content %}{% endblock %}</main>
+<footer class="container-fluid mt-4">
+    <div class="card-body text-center px-0 f-16">
+        <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2017-2018
+            <a href="https://github.com/Hopetree" target="_blank" title="前往博主的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
+        </p>
+        <p class="mb-0"><a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备17114114号-2</a></p>
+    </div>
+</footer>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
