--- a/apps/tool/templates/tool/bd_push_site.html
+++ b/apps/tool/templates/tool/bd_push_site.html
@@ -50,7 +50,7 @@
                required>
         <small class="form-text text-muted">注：规范的sitemap网页的链接应该包含在&lt;loc&gt;标签中，否则无法提取到链接</small>
     </div>
-    <button type="submit" class="btn btn-info btn-sm" id="start-push">开始推送</button>
+    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-push">开始推送</button>
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">推送结果</div>
