--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -83,12 +83,12 @@
                     <a href="{% url 'tool:useragent' %}">
                         <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/chrome.png"
                              alt="在线正则表达式">
-                        <h2 class="card-title">user-agent生成器</h2>
+                        <h2 class="card-title">User-Agent生成器</h2>
                     </a>
                     <p class="mb-0">[爬虫工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">网页请求头在线生成器，自动生成各种平台和浏览器的请求头user-agent</p>
+                    <p class="card-text">网页请求头在线生成器，自动生成各种平台和浏览器的请求头User-Agent</p>
                 </div>
             </div>
         </div>
