--- a/apps/tool/static/tool/css/tool.css
+++ b/apps/tool/static/tool/css/tool.css
@@ -1,3 +1,11 @@
+.tool-cate .card-header strong {
+    padding-bottom: 12px;
+    border-bottom: 2px solid #00AAEE;
+}
+.tool-cate .card-header {
+    border-bottom: 2px solid #f0f0f0;
+    padding-bottom: 10px;
+}
 .tool-header img {
     max-width: 5rem;
 }
