新增HTML字符查询工具

--- a/apps/tool/templates/tool/base_tool.html
+++ b/apps/tool/templates/tool/base_tool.html
@@ -8,7 +8,7 @@
 {% block base_content %}
 <div class="container">
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 f-16">
             {% block left_content %}{% endblock %}
         </div>
         <div class="col-lg-4 d-none d-lg-block">
