--- a/apps/tool/templates/tool/link_test.html
+++ b/apps/tool/templates/tool/link_test.html
@@ -31,7 +31,7 @@
     <div class="form-group">
         <label>需要检测的信息：</label>
         <input type="text" class="form-control rounded-0" id="form-info"
-               placeholder="例：www.example.com"
+               placeholder="例：href=&quot;https://www.example.com&quot;"
                required>
         <small class="form-text text-muted">注：检测的信息一般为自己提供给友站的地址，即自己网站的地址</small>
     </div>
