--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -82,13 +82,28 @@
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:useragent' %}">
                         <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/chrome.png"
-                             alt="在线正则表达式">
+                             alt="User-Agent生成器">
                         <h2 class="card-title">User-Agent生成器</h2>
                     </a>
                     <p class="mb-0">[爬虫工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
                     <p class="card-text">网页请求头在线生成器，自动生成各种平台和浏览器的请求头User-Agent</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
+            <div class="card">
+                <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:html_characters' %}">
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/html.png"
+                             alt="HTML特殊字符对照表">
+                        <h2 class="card-title">HTML特殊字符</h2>
+                    </a>
+                    <p class="mb-0">[开发工具]</p>
+                </div>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">HTML常用字符查询表，HTML特殊字符对照表</p>
                 </div>
             </div>
         </div>
