--- a/templates/test_html.html
+++ b/templates/test_html.html
@@ -37,6 +37,8 @@
         }
 
 
+
+
     </style>
 </head>
 <body>
@@ -44,163 +46,117 @@
     <h1>Hello, world!</h1>
     <div class="row">
         <div class="col-md-8">
-            <div class="alert alert-primary border-0 rounded-0" role="alert">
-                This is a primary alert—check it out!
-                <p>{{ site_description }}</p>
-            </div>
-            <div class="card border-0 rounded-0" id="editor-block">
-                <div class="card-header border-0 bg-white py-2">
-                    <div class="editor-btns">
-                        <button class="btn py-1 px-2"><i class="fa fa-bold fa-fw"></i></button>
-                        <button class="btn py-1 px-2"><i class="fa fa-italic fa-fw"></i></button>
-                        <button class="btn py-1 px-2"><i class="fa fa-quote-left fa-fw"></i></button>
-                        <button class="btn py-1 px-2"><i class="fa fa-table fa-fw"></i></button>
-                        <button class="btn py-1 px-2"><i class="fa fa-link fa-fw"></i></button>
-                        <button class="btn py-1 px-2"><i class="fa fa-image fa-fw"></i></button>
-                        <button class="btn py-1 px-2"><i class="fa fa-code fa-fw"></i></button>
-                    </div>
-                </div>
-                <div class="card-body py-2">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
-                </div>
-                <div class="card-footer border-0 bg-white py-2">
-                    <button type="button" class="btn btn-info float-right">提交评论</button>
-                    <button id="emoji-btns" type="button" class="btn py-1 px-2"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-smile-o fa-2x"></i>
-                    </button>
-                    <div class="dropdown-menu" id='emoji-list' aria-labelledby="emoji-btns">
-                        <div class="editor-btns px-2" id="emojis">
-                            <button class="btn p-1"><img
-                                    src="{% static 'blog/emoji/stuck_out_tongue_winking_eye.png' %}"
-                                    title="stuck_out_tongue_winking_eye" alt="emoji-stuck_out_tongue_winking_eye"
-                                    data-emoji=":stuck_out_tongue_winking_eye:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/sunglasses.png' %}"
-                                                         title="sunglasses" alt="emoji-sunglasses"
-                                                         data-emoji=":sunglasses:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/sweat.png' %}" title="sweat"
-                                                         alt="emoji-sweat" data-emoji=":sweat:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/sweat_smile.png' %}"
-                                                         title="sweat_smile" alt="emoji-sweat_smile"
-                                                         data-emoji=":sweat_smile:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/unamused.png' %}" title="unamused"
-                                                         alt="emoji-unamused" data-emoji=":unamused:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/v.png' %}" title="v" alt="emoji-v"
-                                                         data-emoji=":v:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/worried.png' %}" title="worried"
-                                                         alt="emoji-worried" data-emoji=":worried:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/yum.png' %}" title="yum"
-                                                         alt="emoji-yum" data-emoji=":yum:"></button>
-                        </div>
-                        <div class="editor-btns px-2" id="emojis">
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/sleepy.png' %}" title="sleepy"
-                                                         alt="emoji-sleepy" data-emoji=":sleepy:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/smile.png' %}" title="smile"
-                                                         alt="emoji-smile" data-emoji=":smile:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/smiley.png' %}" title="smiley"
-                                                         alt="emoji-smiley" data-emoji=":smiley:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/smirk.png' %}" title="smirk"
-                                                         alt="emoji-smirk" data-emoji=":smirk:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/sob.png' %}" title="sob"
-                                                         alt="emoji-sob" data-emoji=":sob:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/sparkling_heart.png' %}"
-                                                         title="sparkling_heart" alt="emoji-sparkling_heart"
-                                                         data-emoji=":sparkling_heart:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/stuck_out_tongue.png' %}"
-                                                         title="stuck_out_tongue" alt="emoji-stuck_out_tongue"
-                                                         data-emoji=":stuck_out_tongue:"></button>
-                            <button class="btn p-1"><img
-                                    src="{% static 'blog/emoji/stuck_out_tongue_closed_eyes.png' %}"
-                                    title="stuck_out_tongue_closed_eyes" alt="emoji-stuck_out_tongue_closed_eyes"
-                                    data-emoji=":stuck_out_tongue_closed_eyes:"></button>
-                        </div>
-                        <div class="editor-btns px-2" id="emojis">
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/kissing_heart.png' %}"
-                                                         title="kissing_heart" alt="emoji-kissing_heart"
-                                                         data-emoji=":kissing_heart:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/mask.png' %}" title="mask"
-                                                         alt="emoji-mask" data-emoji=":mask:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/no_mouth.png' %}" title="no_mouth"
-                                                         alt="emoji-no_mouth" data-emoji=":no_mouth:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/pensive.png' %}" title="pensive"
-                                                         alt="emoji-pensive" data-emoji=":pensive:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/persevere.png' %}" title="persevere"
-                                                         alt="emoji-persevere" data-emoji=":persevere:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/pray.png' %}" title="pray"
-                                                         alt="emoji-pray" data-emoji=":pray:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/relieved.png' %}" title="relieved"
-                                                         alt="emoji-relieved" data-emoji=":relieved:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/scream.png' %}" title="scream"
-                                                         alt="emoji-scream" data-emoji=":scream:"></button>
-                        </div>
-                        <div class="editor-btns px-2" id="emojis">
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/grin.png' %}" title="grin"
-                                                         alt="emoji-grin" data-emoji=":grin:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/heart.png' %}" title="heart"
-                                                         alt="emoji-heart" data-emoji=":heart:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/heartbeat.png' %}" title="heartbeat"
-                                                         alt="emoji-heartbeat" data-emoji=":heartbeat:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/heart_eyes.png' %}"
-                                                         title="heart_eyes" alt="emoji-heart_eyes"
-                                                         data-emoji=":heart_eyes:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/hushed.png' %}" title="hushed"
-                                                         alt="emoji-hushed" data-emoji=":hushed:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/innocent.png' %}" title="innocent"
-                                                         alt="emoji-innocent" data-emoji=":innocent:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/joy.png' %}" title="joy"
-                                                         alt="emoji-joy" data-emoji=":joy:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/kissing_closed_eyes.png' %}"
-                                                         title="kissing_closed_eyes" alt="emoji-kissing_closed_eyes"
-                                                         data-emoji=":kissing_closed_eyes:"></button>
-
-                        </div>
-                        <div class="editor-btns px-2" id="emojis">
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/cry.png' %}" title="cry"
-                                                         alt="emoji-cry" data-emoji=":cry:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/disappointed_relieved.png' %}"
-                                                         title="disappointed_relieved" alt="emoji-disappointed_relieved"
-                                                         data-emoji=":disappointed_relieved:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/dizzy_face.png' %}"
-                                                         title="dizzy_face" alt="emoji-dizzy_face"
-                                                         data-emoji=":dizzy_face:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/dog.png' %}" title="dog"
-                                                         alt="emoji-dog" data-emoji=":dog:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/fearful.png' %}" title="fearful"
-                                                         alt="emoji-fearful" data-emoji=":fearful:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/fist.png' %}" title="fist"
-                                                         alt="emoji-fist" data-emoji=":fist:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/flushed.png' %}" title="flushed"
-                                                         alt="emoji-flushed" data-emoji=":flushed:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/frowning.png' %}" title="frowning"
-                                                         alt="emoji-frowning" data-emoji=":frowning:"></button>
-
-                        </div>
-                        <div class="editor-btns px-2" id="emojis">
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/+1.png' %}" title="+1"
-                                                         alt="emoji-+1" data-emoji=":+1:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/angry.png' %}" title="angry"
-                                                         alt="emoji-angry" data-emoji=":angry:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/anguished.png' %}" title="anguished"
-                                                         alt="emoji-anguished" data-emoji=":anguished:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/blush.png' %}" title="blush"
-                                                         alt="emoji-blush" data-emoji=":blush:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/broken_heart.png' %}"
-                                                         title="broken_heart" alt="emoji-broken_heart"
-                                                         data-emoji=":broken_heart:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/clap.png' %}" title="clap"
-                                                         alt="emoji-clap" data-emoji=":clap:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/cold_sweat.png' %}"
-                                                         title="cold_sweat" alt="emoji-cold_sweat"
-                                                         data-emoji=":cold_sweat:"></button>
-                            <button class="btn p-1"><img src="{% static 'blog/emoji/confounded.png' %}"
-                                                         title="confounded" alt="emoji-confounded"
-                                                         data-emoji=":confounded:"></button>
-
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <table>
+                <tr>
+                    <td height="36" bgcolor="#e9f8e5" style="width:20%"><strong>显示结果
+                    </td>
+                    </strong>
+                    <td style="width:20%"><strong>描述
+                    </td>
+                    </strong>
+                    <td style="width:30%"><strong>实体名称
+                    </td>
+                    </strong>
+                    <td style="width:30%"><strong>实体编号
+                    </td>
+                    </strong></tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">￠</td>
+                    <td>分</td>
+                    <td>&amp;cent;</td>
+                    <td>&amp;#162;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&pound;</td>
+                    <td>镑</td>
+                    <td>&amp;pound;</td>
+                    <td>&amp;#163;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&yen;</td>
+                    <td>元</td>
+                    <td>&amp;yen;</td>
+                    <td>&amp;#165;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">§</td>
+                    <td>节</td>
+                    <td>&amp;sect;</td>
+                    <td>&amp;#167;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&copy;</td>
+                    <td>版权</td>
+                    <td>&amp;copy;</td>
+                    <td>&amp;#169;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&#174;</td>
+                    <td>注册商标</td>
+                    <td>&amp;reg;</td>
+                    <td>&amp;#174;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">×</td>
+                    <td>乘号</td>
+                    <td>&amp;times;</td>
+                    <td>&amp;#215;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">÷</td>
+                    <td>除号</td>
+                    <td>&amp;divide;</td>
+                    <td>&amp;#247;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&lt;</td>
+                    <td>小于号</td>
+                    <td>&amp;lt;</td>
+                    <td>&amp;#60;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&gt;</td>
+                    <td>大于号</td>
+                    <td>&amp;gt;</td>
+                    <td>&amp;#62;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&amp;</td>
+                    <td>和号</td>
+                    <td>&amp;amp;</td>
+                    <td>&amp;#38;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&quot;</td>
+                    <td>引号</td>
+                    <td>&amp;quot;</td>
+                    <td>&amp;#34;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">'</td>
+                    <td>撇号&nbsp;</td>
+                    <td>&amp;apos; (IE不支持)</td>
+                    <td>&amp;#39;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&nbsp;</td>
+                    <td>空格（推荐使用）</td>
+                    <td>&amp;nbsp;</td>
+                    <td>&amp;#160;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&ensp;</td>
+                    <td>半角空格</td>
+                    <td>&amp;ensp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td bgcolor="#e9f8e5">&emsp;</td>
+                    <td>全角空格</td>
+                    <td>&amp;emsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+            </table>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
 
