分解settings文件，将网站私人信息单独列出来不提交到GIT

--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -34,7 +34,7 @@
     <div class="page-header mt-0">
         <h1 id="timeline"><i class="fa fa-hourglass-half mr-2"></i>建站日志</h1>
     </div>
-    <ul class="timeline">
+    <ul class="timeline" id="timeline">
         {% for timeline in timeline_list %}
         {% if timeline.side == 'L' %}
         <li>
