--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -199,11 +199,13 @@ blockquote {
 }
 
 /* base right --------------------------------------------------*/
+#home-card .card-header,
 #tag-card .card-header,
 #category-card .card-header {
     border-bottom: 2px solid #f0f0f0;
     padding-bottom:10px;
 }
+#home-card .card-header strong,
 #tag-card .card-header strong,
 #category-card .card-header strong {
     padding-bottom:12px;
@@ -229,6 +231,7 @@ blockquote {
     border-width: 4px;
     content: "";
 }
+
 /*标签云*/
 .tag-cloud {
     width: 100%;
@@ -279,6 +282,32 @@ blockquote {
 /* 全文搜索 */
 .highlighted {
     color: #ea6f5a;
+}
+/*404页面+++++++++++++++++++++++*/
+.errorpage {
+    margin:30px 15px;
+}
+.errormsg {
+    margin:30px 0;
+    color: #6d6d7b;
+}
+.errormsg h3 {
+    margin:25px 0;
+}
+.errormsg a {
+    text-decoration: none;
+    background:#fff;
+    padding:.6em 1em;
+    color:#FF7150;
+    border: 1px solid #ff7150;
+    border-radius: 2px;
+    line-height: 35px;
+    cursor:pointer;
+}
+.errormsg a:hover {
+    background:#ff7150;
+    padding:.6em 1em;
+    color:#fff;
 }
 /* Small devices (landscape phones, 576px and up) */
 /* X-iPhone6 AND plus */
