--- a/apps/blog/templates/blog/index.html
+++ b/apps/blog/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 {% load blog_tags %}
 
-{% block head_title %}博客首页_一个后端使用Django前端使用Bootstrap4搭建的个人博客{% endblock %}
+{% block head_title %}博客首页_一个后端使用Django前端使用Bootstrap搭建的个人博客{% endblock %}
 {% block metas %}
     <meta name="description" content="{{ site_description }}">
     <meta name="keywords" content="{{ site_keywords }}">
