增加链接判断

--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -24,7 +24,7 @@
                 <li>本网站主要用来分享博主在学习Python和其他编程语言及SEO等的心得，文章不定期更新，争取只发原创</li>
             </ul>
         </div>
-        <div class="col-lg-4 d-none d-lg-block">
+        <div class="col-lg-4 d-none d-lg-block mt-3">
             <img class="w-75" src="{% static 'blog/img/aboutweb.png' %}">
         </div>
         <div class="col-lg-4 d-none d-lg-block">
