添加站长验证

--- a/apps/blog/templates/blog/index.html
+++ b/apps/blog/templates/blog/index.html
@@ -7,6 +7,11 @@
 {% block metas %}
     <meta name="description" content="{{ site_description }}">
     <meta name="keywords" content="{{ site_keywords }}">
+    <!--站长验证-->
+    <meta name="baidu-site-verification" content="D4cXhUWFzU" />
+    <meta name="360-site-verification" content="481f313d3977a93e2721f1147a928736" />
+    <meta name="sogou_site_verification" content="UeUReBIRy9"/>
+    <meta name="shenma-site-verification" content="1104d43b77a663ae4c987fb79adb43f1_1520508648">
 {% endblock %}
 
 {% block base_content %}
