--- a/apps/blog/templates/blog/index.html
+++ b/apps/blog/templates/blog/index.html
@@ -10,7 +10,7 @@
     <!--站长验证-->
     <meta name="baidu-site-verification" content="D4cXhUWFzU" />
     <meta name="360-site-verification" content="481f313d3977a93e2721f1147a928736" />
-    <meta name="sogou_site_verification" content="UeUReBIRy9"/>
+    <meta name="sogou_site_verification" content="LP6tuv1I9I"/>
     <meta name="shenma-site-verification" content="1104d43b77a663ae4c987fb79adb43f1_1520508648">
 {% endblock %}
 
