--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -55,7 +55,7 @@
     color: #ea6f5a;
 }
 .article-body a:hover {
-    color: #212529;
+    color: #17a2b8;
 }
 .article-toc {
     position: fixed;
