添加站长统计

--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -75,7 +75,10 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
         <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2017-2018
             <a href="https://github.com/Hopetree" target="_blank" title="前往博主的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
         </p>
-        <p class="mb-0"><a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备17114114号-2</a></p>
+        <p class="mb-0">
+            <a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备17114114号-2</a>
+            <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1273115157'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1273115157' type='text/javascript'%3E%3C/script%3E"));</script>
+        </p>
     </div>
 </footer>
 </body>
